fix: add ingressClassName to ingress spec for Traefik
- Added ingressClassName: traefik to ingress spec
- Fixes ingress routing issue

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -13,6 +13,7 @@ metadata:
     traefik.ingress.kubernetes.io/transport.respondingTimeouts.writeTimeout: "300"
     traefik.ingress.kubernetes.io/custom-request-headers: "X-Forwarded-Proto:%[req.scheme"
 spec:
+  ingressClassName: traefik
   rules:
   - host: portal.webrobot.eu
     http:
