fix: include markdown files in Docker build
- Remove *.md exclusion from .dockerignore
- VitePress needs index.md and other .md files to generate the site
- This was causing index.html not to be generated

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,8 +7,9 @@ node_modules
 .gitignore
 README.md
 SETUP.md
+README.DEPLOY.md
 .env
 .env.local
-*.md
-!package*.json
+# Non escludere i file .md del sito (index.md, features.md, etc.)
+# Solo escludi i README
 
